[package]
name = "proxy_reencryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "proxy_reencryption_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "proxy_reencryption"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.5.1"
cbc = { version = "0.1.2", features = ["alloc"] }

[dependencies]
aes = "0.8.4"
crypto-common = "0.1.6"
rand = "0.8.5"
sha2 = "0.10.8"

[[bench]]
name = "benchmark_aes"
harness = false

[[bench]]
name = "benchmark_pre"
harness = false
